# rust_bip39

./: Cargo.toml  README.md
src/: entropy.rs  error.rs  language.rs  lib.rs  mnemonic.rs  utils.rs
src/words/: japanese.txt
tests/: bip39.rs
