[package]
name = "bip39"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sha2 = "0.10.2"
hex = "0.4.3"
bitreader = "0.3.6"
pbkdf2 = "0.11"
hmac = "0.12.1"
unicode-normalization = "0.1.19"